Made working download button

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       
       <div class="mb-6 md:mb-10">
         <h3 class="text-xl md:text-2xl font-bold mb-4">Download Projekts Piezīmes Now!</h3>
-        <a href="#" class="inline-block border-2 border-black rounded-full px-8 py-3 text-lg font-medium hover:bg-black hover:text-white transition-colors">
-          Download
+        <a href="public/proekts-piezimes.zip" download class="inline-block border-2 border-black rounded-full px-8 py-3 text-lg font-medium hover:bg-black hover:text-white transition-colors">
+          Download 
         </a>
       </div>
       
