small manual text addition

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <h3 class="text-xl font-bold mb-12">1.Download and Install</h3>
           <p class="text-center">
             Get the system by following<br>
-            the download link.
+            the download link<br>afterwards extract all files from zip, and open the "start" file, that will start the system
           </p>
         </div>
         
